Added Blank Gem, and Arcane Shard is now used for Eternal Curses

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -337,7 +337,7 @@ ec.reg.930=Microorganisms used to craft Curses.
 
 ec.reg.940=A Curse is a magical powder that attaches itself to an area of blocks, a mob, or a player, crafted using Living Matter, End Powder and specific ingredients.
 ec.reg.941=It can be either placed right on a block or an entity, or thrown. If it gets thrown into a group of entities, it will have a chance to hit more of then at the same time.
-ec.reg.942=Curses eventually disappear, but they can be made eternal by crafting them with Stardust. Eternal Curses will stay forever on blocks and mobs, and longer than normal Curses on players.
+ec.reg.942=Curses eventually disappear, but they can be made eternal by crafting them with Stardust and Arcane Shard. Eternal Curses will stay forever on blocks and mobs, and longer than normal Curses on players.
 ec.reg.943=Curses placed on blocks are only visible to the player who casted it, and for a short duration to players affected by it.
 ec.reg.944=Getting very close to a Curse makes it visible without having it affect you, but it requires extreme carefulness.
 ec.reg.945=It is possible to remove Curses by using Potion of Purity.
