--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -9,6 +9,7 @@ ec.title.biome.infestedForest=Infested Forest Biome
 ec.title.biome.burningMountains=Burning Mountains Biome
 ec.title.biome.enchantedIsland=Enchanted Island Biome
 
+ec.title.portal=End Portal
 ec.title.enderDragon=Ender Dragon
 ec.title.essence=Essence
 ec.title.ravagedDungeon=Ravaged Dungeon
@@ -47,6 +48,11 @@ ec.reg.20=Rare drop from Endermen.
 ec.reg.21=Drop chance is 1 in 40 (2.5%), Looting enchantment increases the chance.
 
 ec.reg.30=Jukebox discs with various pieces of qwertygiy's music.
+
+ec.reg.1410=This is the portal to the End dimension.
+ec.reg.1411=Once Eyes of Ender are used to activate it, the portal will appear and teleport players who jump in it to the Dragon Lair.
+ec.reg.1412=Unlike Overworld, the End spreads out from the middle, and going far away from the Dragon Lair will let you uncover many new structures and resources.
+ec.reg.1413=The further you travel, the more abundant some of the structures and resources become.
 
 ec.reg.40=Core component of the Basic Essence Altar.
 
@@ -172,7 +178,7 @@ ec.reg.962=Teleportation consumes Energy, which should suffice until the next ph
 ec.reg.963=Maximum teleportation distance is 960 blocks.
 
 ec.reg.270=A tall tower consisting of various types of Obsidian.
-ec.reg.271=They start spawning around 350 blocks away from the Dragon Lair.
+ec.reg.271=They start spawning around 350 blocks away from the Dragon Lair and are most common until 900 blocks, then they start becoming less common.
 ec.reg.272=Each tower contains 3 content floors and 1 chest floor with loot, all are randomly picked and have random elements.
 ec.reg.273=Loot is also often found in Dispensers, Furnaces and Brewing Stands. There is a 1 in 100 (1%) chance of spawning an Enhanced Brewing Stand.
 ec.reg.274=Most floors have Angry Enderman spawners. Each spawner gives the Endermen potion effects that are more powerful the higher you get.
@@ -193,7 +199,7 @@ ec.reg.285=Glowing Obsidian with a chiseled texture, it is easier to break. Uncr
 ec.reg.286=Glowing Obsidian pillar, can be placed horizontally or vertically and it is easier to break. Uncraftable.
 
 ec.reg.890=Energy is a form of power for various items and blocks.
-ec.reg.891=It is omnipresent in the End dimension, and in Energy Clusters that begin to spawn near Dungeon Towers.
+ec.reg.891=It is omnipresent in the End dimension, and in Energy Clusters that begin to spawn near Dungeon Towers and eventually become much more common if you continue traveling further.
 ec.reg.892=Both forms slowly regenerate Energy up to a certain point. Too much Energy causes random leaks of Corrupted Energy.
 ec.reg.893=Corrupted Energy is also created by breaking a Cluster, accompanied by a fiery explosion.
 ec.reg.894=Getting in contact with Corrupted Energy causes massive amount of damage that penetrates armor.
@@ -235,7 +241,7 @@ ec.reg.317=Second attack is a confusion attack, which deals short nausea and bli
 ec.reg.318=Third attack is a beam attack, during which several purple beams are created and then destroyed. The beams deal magic and fire damage, and additional damage when they get destroyed.
 ec.reg.319=When killed, it drops a Spatial Dash Gem, 1 Eye of Ender, 3-6 Obsidian and 35 experience.
 
-ec.reg.320=Tiny clump of Sphalerite which begins to spawn around 1300 blocks away from the Dragon Lair.
+ec.reg.320=Tiny clump of Sphalerite which begins to spawn around 1300 blocks away from the Dragon Lair and is most common around 2700 blocks away. Then it slowly starts disappearing.
 
 ec.reg.330=Rock of medium toughness found in Meteoroids.
 ec.reg.331=Stone Pickaxe or better is required to mine it quickly.
