--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -50,7 +50,7 @@ ec.reg.21=Drop chance is 1 in 40 (2.5%), Looting enchantment increases the chanc
 ec.reg.30=Jukebox discs with various pieces of qwertygiy's music.
 
 ec.reg.1410=This is the portal to the End dimension.
-ec.reg.1411=Once Eyes of Ender are used to activate it, the portal will appear and teleport players who jump in it to the Dragon Lair.
+ec.reg.1411=Once activated using Eyes of Ender, the portal will appear and teleport players who jump in it to the Dragon Lair.
 ec.reg.1412=Unlike Overworld, the End spreads out from the middle, and going far away from the Dragon Lair will let you uncover many new structures and resources.
 ec.reg.1413=The further you travel, the more abundant some of the structures and resources become.
 
