More performance improvements, tweaked Hidden Cellar

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -447,7 +447,7 @@ ec.reg.660=Very flat biome with small amount of caves.
 ec.reg.661=There are currently two variations - Homeland and Laboratory.
 ec.reg.662=Homeland has lakes of Ender Goo, piles of Falling Obsidian and a strange Obsidian road-like structure. Endermen, Baby Endermen and Ender Guardians spawn there.
 ec.reg.663=Laboratory has a single large structure made of special blocks. Endermages and Ender Guardians spawn in the variation.
-ec.reg.665=All variations have Hidden Cellar, a haunted underground dungeon.
+ec.reg.665=All variations have several Hidden Cellars, haunted underground dungeons that are often completely buried in the ground.
 
 ec.reg.670=Variation of End Stone found in the Enchanted Island Biome.
 
