Update dragon regs

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -124,17 +124,15 @@ ec.reg.184=In the temple, there is a dark pedestal for the Dragon Egg. When the 
 
 ec.reg.190=Ender Dragon is a giant boss with 125 hearts, that protects the End dimension.
 ec.reg.191=Nearby Ender Crystals regenerate the dragon's health.
-ec.reg.192=Its passive attacks include churning out fireballs and freezeballs, biting that can cause bad status effects, massive knockback to creatures and destroying blocks.
+ec.reg.192=Its passive attacks include churning out fireballs, biting that can cause bad status effects, massive knockback to creatures and block destruction.
 ec.reg.193=When enough of the Ender Crystals are destroyed, the dragon begins the angry stage.
 ec.reg.194=During the angry stage, passive attacks are more powerful, and the dragon also does special attacks (Easy difficulty or higher).
 ec.reg.195=The angry stage also gives the dragon ability to scatter Obsidian from the pillars when it flies through it.
-ec.reg.196=There are 7 special attacks:
+ec.reg.196=There are 5 special attacks:
 ec.reg.197=Divebomb makes the dragon fly up, and then swoop down through the island.
-ec.reg.198=Stay'n'fire begins with the dragon flying high above a player, and rapidly churning out fireballs at it.
-ec.reg.199=Bitemadness is a melee attack, during which the dragon targets a single player and repeatedly uses biting attack.
+ec.reg.198=Fireburst consists of the dragon flying above players, choosing a target, rapidly churning out fireballs at it and repeating a couple times.
 ec.reg.700=Punch attack quadruples the dragon's flight speed, and then attack a player.
-ec.reg.701=Freeze is a short attack that starts with the dragon churning out a freezeball, and then quickly doing another special attack.
-ec.reg.702=Summon makes the dragon fly high up and spawn Angry Endermen accompanied by lightning.
+ec.reg.702=Summoning makes the dragon fly high up and spawn Angry Endermen accompanied by lightning. When a player is above ground, it will strike the player instead.
 ec.reg.703=Bloodlust slows the dragon down, protects it from attack and turns nearby Endermen into Vampire Bats.
 ec.reg.704=When killed, the dragon floats high up while disappearing, dropping large amount of experience and Dragon Essence.
 ec.reg.705=End Portal is formed below the dragon, with a Dragon Egg on top.
