Added timer to Compendium notification, fix lang stuff

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -440,7 +440,7 @@ ec.reg.653=The miners have 3 powerful spells:
 ec.reg.654=First one is a projectile attack. The miner shoots two rapid projectiles that deal massive amount of damage and set hit mobs on fire.
 ec.reg.655=Second attack is a blast wave, which blasts all living creatures away with higher strength the closer they are, causes damage to them and spawns fire all around.
 ec.reg.656=Third attack is a lava attack, during which the miner continuously creates lava pillars that come from the ground, destroying all blocks that touch the lava.
-ec.reg.657=When killed, they drop 0-2 Fire Shards and 10 experience.
+ec.reg.657=When killed, they drop 0-2 Infernium and 10 experience.
 
 ec.reg.660=Very flat biome with small amount of caves.
 ec.reg.661=There are currently two variations - Homeland and Laboratory.
