Balance tweaks and stuff

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -265,6 +265,8 @@ achievement.newAdventures=Time for new adventures!
 achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
 achievement.learningThePowers=Learning the powers
 achievement.learningThePowers.desc=Create a Dragon Essence Altar
+achievement.enhancedBrewery=Enhanced Brewery
+achievement.enhancedBrewery.desc=Enhance a Brewing Stand
 achievement.rebirth=Rebirth
 achievement.rebirth.desc=Use the Temple Caller and regenerate the End
 achievement.traveling101=Traveling 101
