Tweaked help and finished achievement screen, TODO test

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -22,16 +22,15 @@ ec.help.requirements=Another fragment must be bought first
 
 ec.reg.0=Welcome to the Ender Compendium, the source of all knowledge about the End!
 ec.reg.1=The Compendium is divided into phases, each contains blocks, items and mobs you can find in that phase.
-ec.reg.2=In order to reveal information about these objects, you have to either discover them or pay extra Knowledge Points to unlock them.
-ec.reg.3=Then you can spend your points on individual Knowledge Fragments, which hold the information.
-ec.reg.4=Newly discovered object will show up in the bottom right corner of your screen. Opening the Compendium right after that will open the object.
-ec.reg.5=Note that discovering objects also unlocks some of their fragments and gives you points, whereas buying the object does neither.
-ec.reg.6=Prices of objects and fragments will gradually increase the further you progress.
+ec.reg.2=To reveal information about these objects, you have to discover them or unlock them using Knowledge Points.
+ec.reg.3=Then you can spend your points on Knowledge Fragments, which hold the information.
+ec.reg.4=Newly discovered object will appear in the bottom right corner of your screen. Opening the Compendium will then show the object.
+ec.reg.5=Note that discovering objects also unlocks some of their fragments and gives you points.
+ec.reg.6=Prices of objects and fragments gradually increase the further you progress.
 ec.reg.7=Knowledge Notes are items found in dungeons and traded by villagers. Using them gives you Knowledge Points.
-ec.reg.8=Important progression points are shown in the Achievements screen.
-ec.reg.9=For easier control of the Compendium, you can use the right mouse button instead of the Back button, and mouse wheel to scroll objects and pages.
-ec.reg.17=Opening the Compendium while looking at a block, item, or a mob opens the appropriate object.
-ec.reg.18=The same happens when you press the Compendium key while hovering over and item in a GUI.
+ec.reg.8=Important progression points are shown in the Achievements screen. Click an achievement to open it in the Compendium.
+ec.reg.9=You can use the right mouse button instead of the Back button, and mouse wheel to scroll objects and pages.
+ec.reg.18=Pressing the Compendium key while looking at an object or hovering over an item in a GUI will show it in the Compendium.
 ec.reg.19=This behavior works with Not Enough Items too, but you can bypass it by holding CTRL.
 
 ec.reg.80=Essence is used to unleash power of altars.
