Yay new achievements! First part

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -258,33 +258,55 @@ container.button.travel=Travel
 key.openCompendium=Ender Compendium
 key.openCompendium.bacon=Bacon Compendium
 
-achievement.theMoreYouKnow=The more you know
-achievement.theMoreYouKnow.desc=Press '%1$s' to open Ender Compendium
-achievement.theMoreYouKnow.desc.bacon=Press '%1$s' to open Bacon Compendium
+achievement.enderCompendium=The more you know
+achievement.enderCompendium.desc=Press '%1$s' to open Ender Compendium
+achievement.enderCompendium.desc.bacon=Press '%1$s' to open Bacon Compendium
 achievement.newAdventures=Time for new adventures!
 achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
-achievement.learningThePowers=Learning the powers
-achievement.learningThePowers.desc=Create a Dragon Essence Altar
-achievement.enhancedBrewery=Enhanced Brewery
-achievement.enhancedBrewery.desc=Enhance a Brewing Stand
-achievement.rebirth=Rebirth
-achievement.rebirth.desc=Use the Temple Caller and regenerate the End
-achievement.traveling101=Traveling 101
-achievement.traveling101.desc=Enhance an Ender Pearl
-achievement.superShiny=Super shiny!
-achievement.superShiny.desc=Enhance and Ender Pearl with all possible items
-achievement.deadVisionary=Dead visionary
-achievement.deadVisionary.desc=Kill an Ender Eye to get Spatial Dash Gem
+achievement.dragonEssence=Learning the powers
+achievement.dragonEssence.desc=Create a Dragon Essence Altar
+achievement.enhancedBrewingStand=Enhanced Brewery
+achievement.enhancedBrewingStand.desc=Enhance a Brewing Stand
+achievement.templeCaller=Rebirth
+achievement.templeCaller.desc=Obtain a Temple Caller to regenerate the End
+achievement.endPowder=Secrets of Enhancement
+achievement.endPowder.desc=Get some End Powder for enhancements
+achievement.enhancedEnderPearl=Traveling 101
+achievement.enhancedEnderPearl.desc=Enhance an Ender Pearl
+achievement.enhancedEnderPearlFull=Super shiny!
+achievement.enhancedEnderPearlFull.desc=Enhance an Ender Pearl with all possible items
+achievement.enderEyeKill=Dead visionary
+achievement.enderEyeKill.desc=Kill an Ender Eye and get Spatial Dash Gem
 achievement.thatWasClose=That was close!
 achievement.thatWasClose.desc=Save yourself from falling into the void
-achievement.wholeNewCultures=Whole new cultures!
-achievement.wholeNewCultures.desc=Visit a Biome Island
-achievement.magicOfDecomposition=Magic of decomposition
-achievement.magicOfDecomposition.desc=Acquire some Stardust
-achievement.theNextStep=The next step
-achievement.theNextStep.desc=Get Endium
-achievement.afraidNoMore=Afraid no more!
-achievement.afraidNoMore.desc=Craft a Void Chest to get back items lost in the void
+achievement.transportBeacon=Shortcuts
+achievement.transportBeacon.desc=Find and activate a Transport Beacon
+achievement.stardust=Magic of decomposition
+achievement.stardust.desc=Acquire some Stardust
+achievement.endiumIngot=The next step
+achievement.endiumIngot.desc=Get Endium
+achievement.voidChest=Afraid no more
+achievement.voidChest.desc=Craft a Void Chest to get back items lost in the void
+achievement.biomeCompass=Whole new cultures!
+achievement.biomeCompass.desc=Craft or find a Biome Compass
+achievement.biomeInfestedForest=The Infested Forest
+achievement.biomeInfestedForest.desc=Visit one of the variations of Infested Forest
+achievement.curse=
+achievement.curse.desc=
+achievement.charmPouch=
+achievement.charmPouch.desc=
+achievement.biomeBurningMountains=The Burning Mountains
+achievement.biomeBurningMountains.desc=Visit one of the variations of Burning Mountains
+achievement.fieryEssence=
+achievement.fieryEssence.desc=
+achievement.scorchingPickaxe=
+achievement.scorchingPickaxe.desc=
+achievement.biomeEnchantedIsland=The Enchanted Island
+achievement.biomeEnchantedIsland.desc=Visit one of the variations of Enchanted Island
+achievement.transferenceGem=
+achievement.transferenceGem.desc=
+achievement.energyWand=
+achievement.energyWand.desc=
 
 challenge.hard0Deaths=Hardcore Player
 challenge.hard0Deaths.desc=Kill the dragon without dying
