--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -269,7 +269,7 @@ achievement.enhancedBrewingStand=Enhanced Brewery
 achievement.enhancedBrewingStand.desc=Enhance a Brewing Stand
 achievement.templeCaller=Rebirth
 achievement.templeCaller.desc=Obtain a Temple Caller to regenerate the End
-achievement.endPowder=Secrets of Enhancement
+achievement.endPowder=Secrets of enhancing
 achievement.endPowder.desc=Get some End Powder for enhancements
 achievement.enhancedEnderPearl=Traveling 101
 achievement.enhancedEnderPearl.desc=Enhance an Ender Pearl
@@ -277,8 +277,8 @@ achievement.enhancedEnderPearlFull=Super shiny!
 achievement.enhancedEnderPearlFull.desc=Enhance an Ender Pearl with all possible items
 achievement.enderEyeKill=Dead visionary
 achievement.enderEyeKill.desc=Kill an Ender Eye and get Spatial Dash Gem
-achievement.thatWasClose=That was close!
-achievement.thatWasClose.desc=Save yourself from falling into the void
+achievement.tpNearVoid=That was close!
+achievement.tpNearVoid.desc=Save yourself from falling into the void
 achievement.transportBeacon=Shortcuts
 achievement.transportBeacon.desc=Find and activate a Transport Beacon
 achievement.stardust=Magic of decomposition
@@ -291,22 +291,22 @@ achievement.biomeCompass=Whole new cultures!
 achievement.biomeCompass.desc=Craft or find a Biome Compass
 achievement.biomeInfestedForest=The Infested Forest
 achievement.biomeInfestedForest.desc=Visit one of the variations of Infested Forest
-achievement.curse=
-achievement.curse.desc=
-achievement.charmPouch=
-achievement.charmPouch.desc=
+achievement.curse=Forbidden witchery
+achievement.curse.desc=Create your first Curse
+achievement.charmPouch=Enchant yourself!
+achievement.charmPouch.desc=Create a Charm Pouch
 achievement.biomeBurningMountains=The Burning Mountains
 achievement.biomeBurningMountains.desc=Visit one of the variations of Burning Mountains
-achievement.fieryEssence=
-achievement.fieryEssence.desc=
-achievement.scorchingPickaxe=
-achievement.scorchingPickaxe.desc=
+achievement.fieryEssence=Speeding up the heat
+achievement.fieryEssence.desc=Gather some Fiery Essence
+achievement.scorchingPickaxe=The ultimate block melter
+achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
 achievement.biomeEnchantedIsland=The Enchanted Island
 achievement.biomeEnchantedIsland.desc=Visit one of the variations of Enchanted Island
-achievement.transferenceGem=
-achievement.transferenceGem.desc=
-achievement.energyWand=
-achievement.energyWand.desc=
+achievement.transferenceGem=Teleportation at last
+achievement.transferenceGem.desc=Craft a Transference Gem
+achievement.energyWand=In control of Energy
+achievement.energyWand.desc=Acquire an Energy Wand to manipulate with Energy Clusters
 
 challenge.hard0Deaths=Hardcore Player
 challenge.hard0Deaths.desc=Kill the dragon without dying
