Added Shadow Orchid, updated forge version

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -48,6 +48,7 @@ tile.crossedDecoration.violetMoss.tall.name=Tall Violet Moss
 tile.crossedDecoration.violetMoss.moderate.name=Moderate Violet Moss
 tile.crossedDecoration.violetMoss.short.name=Short Violet Moss
 tile.crossedDecoration.flameweed.name=Flameweed
+tile.crossedDecoration.shadowOrchid.name=Shadow Orchid
 tile.endermanHead.name=Enderman Head
 tile.endermanHead.bacon.name=Baconman Head
 tile.sphalerite.name=Sphalerite
